--- a/src/common/css/nav.scss
+++ b/src/common/css/nav.scss
@@ -73,6 +73,13 @@ nav .icon-burger .line {
 	border-radius: 3px;
 	transition: all .3s ease-in-out;
 }
+
+@media screen and (max-width: 1025px) {
+	nav .links a {
+		font-size: 13.5px;
+    // color: rgb(212, 212, 212);
+	}
+}
 @media screen and (max-width: 900px) {
 	nav .links {
 		float: none;
