--- a/src/team/css/style.css
+++ b/src/team/css/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-
 body {
   background: black;
 }
@@ -144,7 +143,17 @@ section {
   margin-left: 5%;
   margin-bottom: 50px;
   border-radius: 50px;
-  background: #ffffff;
+  /* background-color: rgb(240, 248, 255); */
+  /* filter: blur(40%); */
+  background: linear-gradient(
+    315deg,
+    rgba(101, 0, 94, 1) 3%,
+    rgba(60, 132, 206, 1) 38%,
+    rgba(48, 238, 226, 1) 68%,
+    rgba(255, 25, 25, 1) 98%
+  );
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -155,6 +164,17 @@ section {
   padding: 50px;
   gap: 0 1em;
   backdrop-filter: blur(14px);
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
 }
 canvas {
   display: block;
@@ -252,7 +272,7 @@ canvas {
   }
 }
 
-  /* * {
+/* * {
     font-family: Nunito, sans-serif;
   } */
 .text-blk {
@@ -346,6 +366,7 @@ canvas {
 .team-img {
   max-width: 100%;
   /* filter: grayscale(70%); */
+  border-radius: 50%;
   background-image: url("../gallery/1668445691881.png");
   background-size: cover;
   background-repeat: no-repeat;
